--- a/summit2017-wc-mc-polymer-client/components/tc-books/tc-books.html
+++ b/summit2017-wc-mc-polymer-client/components/tc-books/tc-books.html
@@ -40,7 +40,8 @@
             properties: {
                 requestUrl: {
                     type: String,
-                    value: 'http://localhost:2000/books'
+                    value: '/books',
+                    reflectToAttribute: true
                 },
                 requestErrorText: {
                     type: String,
